style.css
/* #C69F68 : tan */
/* #4B5975 : nice blue */
/* #CCCCB5 : neutral off white */
/* #191F28 : dark blue */
/* #141A22 : very dark blue */

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Caveat';
  font-family: 'Libre Baskerville', serif;
  font-family: 'Roboto Slab', serif;
}

body,
html {
  margin: 0;
  padding: 0;
  background-color: #191F28;
  height: 100%;
}


@keyframes fadeIn {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.navbar {
  z-index: 1;
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #141A22;
  color: #C69F68;
}

.nav-title {
  font-size: 3.5rem;
  margin: .5rem;
}

.hr-container {
  width: 100%;
  height: 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.hr-container hr {
  border: 2px solid #CCCCB5;
  border-radius: 10px;
}

.navbar-links ul {
  margin: 0;
  padding: 0;
  display: flex;

}

.navbar-links li {
  list-style: none;
  display: flex;
  align-items: center;
  font-size: 1.2rem;
}

.navbar-links li a {
  text-decoration: none;
}


.link-container {
  display: flex;
  justify-content: center;
  align-items: center;
  color: #C69F68;
  padding: 1rem;
  gap: 3px;
}

.navbar-links img {
  height: 2.25rem;
}





@keyframes navItemUnderline {
  from {
    border-bottom: 3px solid transparent;
  }

  to {
    border-bottom: 3px solid #C69F68;
  }
}

.nav-text {
  text-decoration: none;
}

.navbar-links li a:hover>.nav-text {
  animation: navItemUnderline .5s forwards;
  animation-play-state: running;
}


.toggle-button {
  position: absolute;
  top: 2rem;
  right: 1rem;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  width: 40px;
  height: 21px;
}

.toggle-button .bar {
  height: 4px;
  width: 100%;
  background-color: #C69F68;
  border-radius: 10px;
}




.home-container {
  position: absolute;
  margin-top: 70px;
  /* background-color: lightblue; */
  height: 530px;
  width: 100%;
  display: flex;

}



.home-container img {
  margin-top: 50px;
  margin-left: 200px;
  margin-bottom: 50px;
  border: 25px solid #4B5975;
  border-radius: 50px;
  animation: fadeIn 2s;

}

.welcome-text-container {
  width: 55%;
  margin: 60px 50px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.welcome-text {
  width: 400px;
  font-size: 70px;
  color: #CCCCB5
}

@keyframes slideInLeft {
  from {
    transform: translateX(50px);
  }

  to {
    transform: translateX(0px);
  }
}


.hello {
  width: fit-content;
  opacity: 1;
  animation: slideInLeft 2s, fadeIn 3s forwards;
}

.name {
  width: fit-content;
  opacity: 0;
  animation: fadeIn 2.5s 1.5s forwards;
}

.waving-hand {
  animation: wave-animation 3s 2s;
  animation-iteration-count: infinite;
  transform-origin: 70% 70%;
  display: inline-block;

}

@keyframes wave-animation {
  0% {
    transform: rotate(0.0deg)
  }

  10% {
    transform: rotate(14.0deg)
  }

  /* The following five values can be played with to make the waving more or less extreme */
  20% {
    transform: rotate(-8.0deg)
  }

  30% {
    transform: rotate(14.0deg)
  }

  40% {
    transform: rotate(-4.0deg)
  }

  50% {
    transform: rotate(10.0deg)
  }

  60% {
    transform: rotate(0.0deg)
  }

  /* Reset for the last half to pause */
  100% {
    transform: rotate(0.0deg)
  }
}

@keyframes typing {
  from {
    width: 0
  }

  to {
    width: 100%
  }
}

.website {
  margin-left: 0;
  width: fit-content;
}

.website p {
  width: fit-content;
  opacity: 0;
  color: #4B5975;
  font-size: 30px;
  overflow: hidden;
  border-right: .15em solid #CCCCB5;
  white-space: nowrap;
  margin: 10px;
  letter-spacing: .15em;
  animation: fadeIn 0s 3.5s forwards, typing 3s 3s steps(40, end), blink-caret .75s step-end infinite, fadeIn 2s 3s;
}

@keyframes typing {
  from {
    width: 0
  }

  to {
    width: 100%
  }
}

@keyframes blink-caret {

  from,
  to {
    border-color: transparent
  }

  50% {
    border-color: white;
  }
}

.footer {
  position: relative;
  top: 630px;
  height: 60px;
  width: 100%;
  background-color: #141A22;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer hr {
  border: 2px solid #CCCCB5;
  border-radius: 10px;
  margin: 10px;
}

#line1 {
  width: 80%
}

#line2 {
  width: 10%;
}

.social-links-container {
  width: 170px;
  height: 80%;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px
}



.social-links-container a {
  height: 90%;
}

.social-links-container img {
  height: 100%;
}




.about-container {
  position: absolute;
  height: 100%;
  width: 100%;
  display: flex;
  margin-top: 90px;
  gap: 50px;
}

.about-container img {
  height: 425px;
  border: 10px solid #4B5975;
  border-radius: 50px;
  margin-top: 50px;

}

.about-text-container {
  opacity: 0;
  display: flex;
  flex-direction: column;
  gap: 10px;
  animation: fadeIn 2s forwards;
}



.about-text {
  width: 500px;
  background-color: #141A22;
  padding: 15px;
  border-radius: 50px;
  ;
  color: #CCCCB5;
  font-size: 65px;
  margin-left: 50px;
  margin-top: 50px;
  height: fit-content;
}

.description {
  font-size: 25px;
  width: 700px;
  margin-top: 20px;
  padding: 30px;
  font-family: 'Open Sans', sans-serif;
}


@keyframes slideUp {
  from {
    transform: translateY(150px);
  }
  to {
    transform: translateY(0px);
  }
}


.resume-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#resume-img {
  width: 80%;
  animation: slideUp 2s, fadeIn 3s;
}

#resume-image.active {
  transform: scale(1.5);
}

.button-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.button {
  opacity: 0;
  animation: fadeIn 1.5s 2s forwards;
  background-color: #4B5975;
  border: 10px solid #CCCCB5;
  border-radius: 30px;
  font-size: 25px;
  color: #CCCCB5;
  width: 200px;
  height: 100px;
  margin: 20px;
  margin-top: 100px;
}

.button a {
  text-decoration: none;
  color: inherit;
}



.zoom {
  width: 80px;
  height: fit-content;
  border-radius: 0px;

}

.button:hover {
  background-color: #323b4e;
}


/* @keyframes bobUpAndDown {
  0% {
    transform: translateY(-20px);
  }
  50% {
    transform: translateY(0px);
  }
  100% {
    transform: translateY(-20px);
  }
} */

.more-about-container {
  opacity: 0;
  position: absolute;
  height: 600px;
  margin-top: 650px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  animation: fadeIn 2s .5s forwards;

}

.more-title {
  font-size: 40px;
}

.more-about-text {
  background-color: #4B5975;
  padding: 20px;
  color: #CCCCB5;
  border: 5px solid #CCCCB5;
}

.aboutme {
  border: 0px solid transparent;
  background-color: #141A22;
  border-radius: 50px;
  margin-top: 20px;
  font-size: 25px;
  font-family: 'Open Sans', sans-serif;
  max-width: 1200px;
}

.even-more {
  margin-top: 2000px;
}


@keyframes enlargeOnHover {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.2);
  }
}

.main-project-container {
  position: absolute;
  margin-top: 100px;
  width: 90%;
  margin-left: 5%;
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 1300px;
}

.projects-container {
  position: absolute;
  display: flex;
  width: 90%;
  margin-top: 450px;;
  height: fit-content;
  margin-bottom: 0px;
  gap: 60px;
  justify-content: center;
  align-items: center;

}





.project-display {
  width: 600px;
  height: fit-content;
  padding-bottom: 20px;
  background-color: #323b4e;
  border: 10px solid #CCCCB5;
  border-radius: 50px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.mtd {
  opacity: 0;
  animation: fadeIn 3s forwards;
}

.project-desc {
  margin: 5px 25px;
  font-size: 20px;
  color: whitesmoke;
  text-wrap: wrap;
  font-family: 'Open Sans', sans-serif;
}

.project-display a {
  display: flex;
  gap: 10px;
}

.project-display img {
  width: 30px;
}

.portfolio-project {
  opacity: 0;
  animation: fadeIn 3s forwards;
}

.rover-container {
  opacity: 0;
  margin-top: 20px;
  background-color: #323b4e;
  border: 8px solid #CCCCB5;
  border-radius: 30px;
  width: 100%;
  height: 400px;
  display: flex;
  align-items: center;  
  animation: fadeIn 3s forwards;
}

.rover-container img {
  width: 80%;
  height: 300px;
  border: 8px solid #CCCCB5;
  border-radius: 30px;
  margin-top: 30px;
  margin-left: 30px;
}

.rover-container p {
  font-family: 'Open Sans', sans-serif;
  font-size: 18px;

}

.rover-text {
  height: 90%;
  text-wrap: wrap;
  margin: 30px;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
}



@media (max-width: 1375px) {

.rover-container {
  height: fit-content
}

  .projects-container {
    flex-direction: column;
    justify-content: flex-start;
    height: min-content;
    margin-top: 500px;
  }
  .mtd {
    margin-bottom: 10px;
  }

}

@media (max-width: 1270px) {


  .rover-container {
    flex-direction: column;
    height: fit-content;
  }

  .projects-container {
    margin-top: 600px;
  }
  .about-container img {
    display: none;
  }

  .about-text-container {
    margin-top: 50px;
    width: 100%;
    align-items: center;
  }

  .about-text {
    margin: 0;
  }


  




}


@media (max-width: 1160px) {


  .projects-container {
    margin-top: 700px
  }

  .home-container {
    justify-content: center;
    align-items: center;
  }

  .website p {
    font-size: 30px;
  }

  .welcome-text-container {
    width: min-content;
    margin-right: 5px;
    margin-left: 25px;
  }

  .welcome-text {

    font-size: 60px;
  }

  .home-container img {
    margin-left: 65px;
    width: 400px;
  }

}

@media (max-width: 960px) {

  .projects-container {
    margin-top: 750px;
  }


  .website p {
    display: none;
  }

  .welcome-text-container {
    width: 300px;
  }

  .projects-container {
    flex-direction: column;
  }

  


}

@media (max-width: 780px) {

  .about-text {
    font-size: 45px;
  }

  .description {
    width: 500px;
    font-size: 25px;
  }

  .home-container {
    justify-content: center;
    align-items: center;
  }

  .home-container img {
    width: 285px;
    margin-left: 10px;
  }



  .website p {
    display: none;
  }
}





@media (max-width: 700px) {


  .projects-container {
    justify-content: center;
    align-items: center;
    margin-top: 900px;
  }

  .project-display {
    width: 80%;
    height: fit-content;
    padding-bottom: 10px;
  }


  .more-about-text {
    margin-top: 40px;
    width: 410px;
  }

  .about-text {
    width: 410px;
    font-size: 35px;
  }

  .description {
    font-size: 25px;
  }


  .toggle-button {
    display: flex;
  }

  .navbar-links {
    display: none;
    width: 100%;
  }

  .navbar {
    flex-direction: column;
    align-items: flex-start;
  }

  .navbar-links ul {
    flex-direction: column;
    width: 100%;
  }

  .navbar-links li {
    text-align: center;
    justify-content: center;
  }

  .navbar-links li a {
    padding: .5rem 1rem;
  }

  .navbar-links.active {
    display: flex;
  }

  .hr-container.active {
    display: flex;
    width: 90%;
    height: 10px;
    margin-left: 5%;
    justify-content: flex-start;
  }

  .nav-title {
    align-self: center;
  }

  .hr-container {
    display: none;
  }

  .home-container {
    flex-direction: column;
    justify-content: center;
    height: auto;
    gap: 0px;
  }

  .home-container img {
    margin-bottom: 10px;
    width: 320px;
  }

  .welcome-text-container {
    margin: 0px;
    width: 100%;
    align-items: center;
  }

  .welcome-text {
    font-size: 50px;
  }

  #line1 {
    width: 100%;
  }

  #line2 {
    width: 100%;
  }
}

